# scholar-wiki

./: .env.example  .gitignore  .mcp.json  .tmp_events.py  .tmp_job_parse.py  .tmp_tables.py  .tmp_task_events.py  .tmp_task_schema.py  .tmp_tools.py  AGENTS.md  CLAUDE.md  CODE_REVIEW_REPORT.md  PROJECT_E2E_USER_MAP.md  PROJECT_FEATURES_AND_USER_JOURNEYS.md  PROJECT_REVIEW_AND_REFACTOR_PLAN.md  README.md  USER_FEEDBACK.md  ai_dictionary_match.py  docker-compose.weaviate.yml  kn_graph.spec  lib_demo.json  lib_pdf.json  pyproject.toml  setup.nsi  setup_electron.nsi  z_json.html  z_types.html  z_write.html
.claude/: settings.local.json
.codex/: config.toml  library_codex_config.json
.learnings/: LEARNINGS.md
.tmp/: acceptance_playwright_round.py  codex_selftest_after_authfix.json  codex_selftest_result.json  debug_trace.py  hello_ascii_test.json  hello_e2e_after_fix.json  hello_e2e_after_fix2.json  hello_unicode_escape_test.json  min_playwright_check.py  post_send_state.py  recon_chat.py  recon_chat_session.py  recon_ui.py  repro_reader_playwright.py
config/: llm_providers.json
docs/: api.md  async_pipeline_api.md  chat_test_routes.md  data_model.md  frontend-migration-checklist.md  graph_chat_behavior_matrix.md  mineru-integration-guide.md  project_spec_index.md  reusable_extract_eval_workflow.md  run_management.md  storage_and_port_conventions.md  user_journey_tests.md
logs/: import_path_diagnostics.jsonl
prompt/: extraction_system_prompt.md  judge_system_prompt.md  supply_chain_lexicon.md  translation_system_prompt.md
scholarai-workbench/: index.html  (+7 more)
(+411 files in other folders)
