[project]
name = "kn-gragh"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ftfy>=6.3.1",
    "psycopg[binary]>=3.3.3",
    "pypdf>=6.10.2",
    "pyyaml>=6.0.3",
    "requests>=2.33.1",
    "scrapling[all]>=0.4.2",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
