[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kn_graph"]

[project]
name = "kn-gragh"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.4.0",
    "fastapi>=0.115.12,<0.116",
    "ftfy>=6.3.1",
    "pymupdf>=1.26.0",
    "python-multipart>=0.0.10",
    "pyyaml>=6.0.3",
    "redis>=5.2.0",
    "requests>=2.33.1",
    "scrapling[all]>=0.4.2",
    "sse-starlette>=2.1.3",
    "starlette>=0.41.3,<0.47",
    "uvicorn>=0.32.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.setuptools.packages.find]
where = ["src"]
